--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -125,9 +125,9 @@
                         <div class="input-group form-group">
                             <label class="control-label col-sm-4">Type<span class="text-danger">*</span></label>
                             <select name="type" class="form-control form-control-lg mr-2">
-                                <option selected="true" value="Institute">Institute</option>
-                                <option value="Teacher">Teacher</option>
-                                <option value="Student">Student</option>
+                                <option {% if prefil.type == "Institute" %}selected {% endif %} value="Institute">Institute</option>
+                                <option {% if prefil.type == "Teacher" %}selected {% endif %} value="Teacher">Teacher</option>
+                                <option {% if prefil.type == "Student" %}selected {% endif %} value="Student">Student</option>
                             </select>
                         </div>
                         <div class="input-group form-group">
@@ -169,10 +169,10 @@
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                             </div>
                             <input type="password" name='password' class="form-control form-control-lg pwd"
-                                value="{{ prefil.password }}" required pattern=".{6,20}" title="At least 6 charcters">
-                            <span class="input-group-btn ml-1">
-                                <button class="btn btn-default reveal mt-1" type="button"><i class="fa fa-eye"></i></button>
-                            </span>
+                                value="{{ prefil.password }}" placeholder="Password" required pattern=".{6,20}" title="At least 6 charcters">
+                                <div class="input-group-append">
+                                    <span style="background-color:rgb(218, 218, 218);" class="reveal px-2 pt-1"><i class="fa fa-eye"></i></span>
+                                </div>
 
                         </div>
                         <!-- <div class="input-group form-group">
