--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -478,6 +478,7 @@
         <ul class="list-unstyled">
           <li><a href="#"><i class="flaticon-mail-22"></i> Inbox</a></li>
           <li><a href="{% url 'coachingprofile' %}"><i class="flaticon-user-11"></i> My Profile</a></li>
+          <li><a href="{% url 'changepass' %}"><i class="flaticon-key-2"></i> Change Password</a></li>
           <li><a href="{% url 'Logout' %}"><i class="flaticon-power-off"></i> Logout</a></li>
         </ul>
       </div>
