--- a/templates/fees/submitFee.html
+++ b/templates/fees/submitFee.html
@@ -100,9 +100,10 @@
                     <!--Table head-->
                     <thead>
                         <tr>
-                            <th>Student UserName</th>
+                            <th>Student Name</th>
                             <th>Student Name</th>
                             <th>Institute Name</th>
+                            <th>Course Name</th>
                             <th>Action</th>
                         </tr>
                     </thead>
@@ -115,6 +116,7 @@
                                 <td>{{k.student.user.username}}</td>
                                 <td>{{k.student.user.first_name}}</td>
                                 <td>{{k.institute.user.username}}</td>
+                                <td>{{k.courseName}}</td>
                                 <td><input type="hidden" name="userAction" value="subjectSearch">
                                     <input type="hidden" name="userId" value="{{k.id}}">
                                     <button class="btn btn-danger" type="submit">Submit</button>
@@ -163,7 +165,7 @@
                                 <td>{{student.teachType}}</td>
 
                                 <td>{{student.installments}}</td>
-                                <td>{{fees}}</td>
+                                <td ><input type="hidden" name="studentfinalfee" value="{{fees}}">{{fees}}</td>
                                 <td><input type="hidden" name="userAction" value="studentFee"><button
                                         class="btn btn-danger" name="subjectId" value="{{student.id}}" type="submit"
                                         name="button">Pay</button></td>
@@ -316,7 +318,8 @@
                     </tr>
                     <!--Table head-->
                     <!--Table body-->
-                    {% for k in submitfees %}
+                    {% for k in stud %}
+                    {% for j in submitfees|slice:":1" %}
                     
                 
                     
@@ -324,14 +327,21 @@
                     
                         <tr id="{{ k.pk }}">
                             <td>{{ forloop.counter }}</td>
-                            <td>{{k.student.student}}</td>
-                            <td>{{k.student.forclass}}</td>
-                            <td>{{k.student.courseName}}</td>
+                            
+                            <td>{{k.student.user}}</td> 
+                            <td>{{k.forclass}}</td>
+                            <td>{{k.courseName}}</td>
 
-                            <td>{{k.student.teachType}}</td>
-                            <td>{{k.fees.final_amt}}</td>
-                            <td>{{k.feePayed}}</td>
-                            <td>{{k.balanceFee}}</td>
+                            <td>{{k.teachType}}</td>
+                            
+
+                          {% if k.student.user == j.student.user %}
+                           
+
+                            
+                            <td>{{j.totalFee}}</td>
+                            <td>{{j.feePayed}}</td>
+                            <td>{{j.balanceFee}}</td>         
 
                             <td class="text-center">
 
@@ -339,17 +349,39 @@
                                         class="flaticon-pencil-line" style="font-size:medium;"></i></a>
                                 <a class="btn btn-danger" href="{% url 'deleteStudent' k.id %}"><i
                                         class="flaticon-delete-fill" style="font-size:medium;"></i></a>
-
+                            </td>
 
 
                             <td><input type="hidden" name="userAction" value="subjectSearch">
                                 <input type="hidden" name="userId" value="{{k.id}}">
                                 <button class="btn btn-danger" type="submit">Pay</button>
                             </td>
-                           
+                          {% else %}
+                          <td>{{j.totalFee}}</td>                            
+                          <td>Not Paid</td>
+                          <td>{{j.balanceFee}}</td>                 
+                            
+
+                            <td class="text-center">
+
+                                <a class="btn btn-warning" href="{% url 'editStudent' k.id %}"><i
+                                        class="flaticon-pencil-line" style="font-size:medium;"></i></a>
+                                <a class="btn btn-danger" href="{% url 'deleteStudent' k.id %}"><i
+                                        class="flaticon-delete-fill" style="font-size:medium;"></i></a>
                             </td>
+
+
+                            <td><input type="hidden" name="userAction" value="subjectSearch">
+                                <input type="hidden" name="userId" value="{{k.id}}">
+                                <button class="btn btn-danger" type="submit">Pay</button>
+                            </td>
+                            {% endif %}
+                          
+                           
+                            
                         </tr>
                     </form>
+                    {% endfor %}
                     {% endfor %}
                
                     
