--- a/templates/students/viewStudents.html
+++ b/templates/students/viewStudents.html
@@ -42,6 +42,7 @@
                                 <th>First Name</th>
                                 <th>Last Name</th>
                                 <th>Email Id</th>
+                                <th>Password</th>
                                 
                                 <th>Phone Number</th>
                                 <th>Course Enrolled</th>
@@ -57,6 +58,7 @@
                                         <td>{{student.student.user.first_name}}</td>
                                         <td>{{student.student.user.last_name}}</td>
                                         <td>{{student.student.user.email}}</td>
+                                        <td>{{student.student.user.password}}</td>
                                         
                                         <td>{{student.student.phone}}</td>
                                         <td>{{course.courseName}}</td>
